--- a/tiki/css/main.css
+++ b/tiki/css/main.css
@@ -557,7 +557,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
     width: 100%;
     overflow: hidden;
     display: flex;
-    margin-bottom: 2rem;
+   padding-bottom: 2rem;
 }
 .Banner_after_price_shock .swiper-wrapper
 {
@@ -566,7 +566,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
 }
 .Banner_after_price_shock .container_banner_item .banner_item
 {
-  margin: 0 8px;
+  padding: 0 8px;
 
 }
 .Banner_after_price_shock .container_banner_item .banner_item img
@@ -597,7 +597,6 @@ header .container_bottom_header ul li.item_menu_header:first-child
 {
     display:flex;
     flex-direction:column;
-    justify-content:center;
     align-items: center;
     text-align: center;
     overflow: hidden;
@@ -635,7 +634,7 @@ header .container_bottom_header ul li.item_menu_header:first-child
 }
 .banner_after_info_product .container_banner_item .banner_item
 {
-  margin: 0 8px;
+  padding: 0 8px;
 
 }
 .banner_after_info_product .container_banner_item .banner_item img
@@ -788,7 +787,9 @@ padding: 0 5px;
 }
 .container_slide_after_brand_auth_main
 {
+    width: 100%;
     position: relative;
+    overflow: hidden;
 }
 .slide_after_brand_auth .slide_after_brand_auth_item span
 {
@@ -828,10 +829,13 @@ padding: 0 5px;
 }
 .icon_prav
 {
+    top: 0;
     left: 0;
+    display: none;
 }
 .icon_next
-{ right: 0;}
+{
+    top: 0; right: 0;}
 
 /* -----------------list feature---------- */
 .list_featured .grid
@@ -866,7 +870,6 @@ padding: 0 5px;
 {
     display:flex;
     flex-direction:column;
-    justify-content:center;
     align-items: center;
     text-align: center;
     overflow: hidden;
@@ -904,6 +907,7 @@ padding: 0 5px;
 {
     overflow: hidden;
     border-radius: 30px;
+    padding: 10px;
 }
 .banner_after_featured .banner_after_featured_item image
 {
@@ -961,7 +965,6 @@ padding: 0 5px;
 {
     display:flex;
     flex-direction:column;
-    justify-content:center;
     align-items: center;
     text-align: center;
     cursor: pointer;
